# instacom-assignment

./: README.md
backend/: .env  Cargo.toml  docker-compose.yml  init.sql
backend/entity/: Cargo.toml
backend/entity/src/: leads.rs  lib.rs  prelude.rs  users.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240705_170723_create_user_table.rs  m20240709_073958_create_lead_table.rs
backend/src/: main.rs
backend/src/routes/: auth_routes.rs  lead_routes.rs  mod.rs
backend/src/routes/handlers/: auth_handler.rs  lead_handler.rs  mod.rs
backend/src/routes/middleware/: auth_middleware.rs
backend/src/utils/: api_response.rs  constants.rs  jwt.rs
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/components/: CreateLeadDialog.jsx  CustomToolbar.jsx  EditDialog.jsx  FilterByDateDialog.jsx  FilterByDateRangeDialog.jsx  Header.jsx  Leads.jsx  Login.jsx  Signup.jsx
