[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"


[workspace]
members = ["entity", "migration"]

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0.203", features = ["derive"] }
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] } 
dotenv = "0.15.0"
serde_json = "1.0.120"
lazy_static = "1.5.0"
sea-orm-cli = "0.12.15"
entity = { path = "entity" }
migration = { path = "migration" }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
actix-web-lab = "0.20.2"
bcrypt = "0.15.1"
actix-cors = "0.7.0"